--- a/demo/main.html
+++ b/demo/main.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Tree Shaking Test with Webpack</title>
-    <script src="../dist/bundle.js"></script>
+    <script src="../dist/consumer.js"></script>
   </head>
 
   <body>
