chore: use esm modules in browser

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Tree Shaking Test with Webpack</title>
-    <script src="../dist/consumer.js"></script>
+    <title>Tree Shaking Test with Rollup</title>
+    <script type="module" src="main.js"></script>
   </head>
 
   <body>
